RequestSpec and ESLint
Adding eslint to the project.
Adding new request tests.
Updating specs to follow the eslint standards set.

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   },
   "scripts": {
     "test": "./tests/node_modules/karma/bin/rma start karma.conf.js"
+  },
+  "devDependencies": {
+    "eslint": "^3.11.1"
   }
 }
