--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ cache:
 before_script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
+    - npm install -g yarn
 
 script:
     - npm test
