--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ node_js:
 env:
     - NODE_ENV=development
 
+before_install:
+    - npm install -g yarn
+
 install: yarn install
 
 cache:
@@ -16,7 +19,6 @@ cache:
 before_script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
-    - npm install -g yarn
 
 script:
     - npm test
