--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,13 @@ node_js:
 env:
     - NODE_ENV=development
 
+addons:
+    apt:
+        sources:
+            - google-chrome
+        packages:
+            - google-chrome-stable
+
 before_install:
     - npm install -g yarn
 
@@ -19,7 +26,6 @@ cache:
     yarn: true
 
 before_script:
-    - export CHROME_BIN=chromium-browser
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
 
